include/ruby/defines.h
@@ -72,6 +72,17 @@ extern "C" {
 #  define GCC_VERSION_SINCE(major, minor, patchlevel) 0
 # endif
 #endif
+#ifndef GCC_VERSION_BEFORE
+# if defined(__GNUC__) && !defined(__INTEL_COMPILER) && !defined(__clang__)
+#  define GCC_VERSION_BEFORE(major, minor, patchlevel) \
+    ((__GNUC__ < (major)) ||  \
+     ((__GNUC__ == (major) && \
+       ((__GNUC_MINOR__ < (minor)) || \
+        (__GNUC_MINOR__ == (minor) && __GNUC_PATCHLEVEL__ <= (patchlevel))))))
+# else
+#  define GCC_VERSION_BEFORE(major, minor, patchlevel) 0
+# endif
+#endif
 
 /* likely */
 #if __GNUC__ >= 3
